# utility-library

./: .gitignore  README.md  hiv100_env  hiv300_env  hiv400_env
host/: README.md
package/: .gitignore  Makefile  README.md
package-14.07/: .gitignore  Makefile  README.md
package-14.07/json-c/: makefile.fedora
package-14.07/libubox/: makefile.fedora  makefile.hiv200
package-14.07/lua/: makefile.hiv100  makefile.ubuntu
package-14.07/ncurses/: makefile.fedora  makefile.ubuntu
package-14.07/readline/: makefile.hiv200
package-14.07/ubus/: makefile.fedora  makefile.hiv200
package-14.07/uci/: makefile.hiv100
package-15.04/: .gitignore  Makefile  README.md
package-15.04/json-c/: makefile.hiv100  makefile.hiv200
package-15.04/libubox/: makefile.fedora
package-15.04/uci/: makefile.ubuntu
package/json-c/: makefile.hiv100  makefile.hiv200  makefile.ubuntu
package/libubox/: cmake_install.hiv100  cmake_install.ubuntu  makefile.hiv100  makefile.hiv200  makefile.ubuntu
package/lua/: makefile.hiv100  makefile.hiv200  makefile.ubuntu
package/luasocket/: makefile.hiv100  makefile.ubuntu
package/ncurses/: makefile.hiv100  makefile.hiv200  makefile.ubuntu
package/readline/: makefile.hiv100  (+2 more)
package/ubus/patch/examples/: CMakeLists.txt
package2/: Makefile
prebuild/: rootfs-hiv100.tgz  rootfs-hiv300.tgz  rootfs-hiv400.tgz
scripts/: chk_hiv100.sh  chk_hiv300.sh  chk_hiv400.sh  chk_qt486_hiv100.sh  chk_qt486_hiv300.sh  default_bashrc  devel_common_alias  devel_common_env  devel_common_env_chk  devel_hilib  get_appver.sh
src/: Makefile  release
(+77 files in other folders)
